Fix folder expansion alignment on pages

--- a/src/styles/interface/global.css
+++ b/src/styles/interface/global.css
@@ -50,3 +50,7 @@
 #pomodoro_container {
     place-self: center;
 }
+
+#linkblocks.in-folder {
+    align-self: start;
+}
